--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div id="app">
 
         <div class="header">
-
             <div class="header-logo">ei0124's Portfolio</div>
             <div class="header-list">
                 <ul>
@@ -25,11 +24,11 @@
         </div>
 
         <div class="footer">
-            <!--
-            <ul>
-                <li v-for="item in linklist">{{item}}</li>
-            </ul>
-            -->
+            <div class="footer-list">
+                <ul>
+                    <li v-for="item in linklist"><a v-bind:href="item.url" target="_blank">{{item.text}}</a></li>
+                </ul>
+            </div>
         </div>
 
     </div>
