add skills and delete the comment

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="main">
             <div class="cabout">
                 <a name="about">
-                    <h2 class="section-style">About</h2>
+                    <h1 class="section-style">About</h1>
                 </a>
                 <table>
                     <tr>
@@ -47,13 +47,25 @@
 
             <div class="cskills">
                 <a id="skills">
-                    <h2 class="section-style">Skills</h2>
+                    <h1 class="section-style">Skills</h1>
                 </a>
+                <div>
+                    <img class="imgs" src="./images/Creo.png">
+                    <img class="imgs" src="./images/Kicad.png">
+                    <img class="imgs" src="./images/Blender.png">
+                    <img class="imgs" src="./images/C++.png">
+                    <img class="imgs" src="./images/Python.png">
+                    <img class="imgs" src="./images/Rails.png">
+                    <img class="imgs" src="./images/ROS.png">
+                    <img class="imgs" src="./images/Arduino.png">
+                    <img class="imgs" src="./images/Processing.png">
+                    <img class="imgs" src="./images/Verilog.png">
+                </div>
             </div>
 
             <div class="cevents">
                 <a id="events">
-                    <h2 class="section-style">Events</h2>
+                    <h1 class="section-style">Events</h1>
                 </a>
                 <table>
                     <tr>
@@ -94,14 +106,16 @@
 
             <div class="cworks">
                 <a id="works">
-                    <h2 class="section-style">Works</h2>
+                    <h1 class="section-style">Works</h1>
                 </a>
+                <h2 class="center">Robots</h2>
+                <h2 class="center">Electronics</h2>
+                <h2 class="center">Programing</h2>
             </div>
 
             <div class="cinterests">
                 <a id="interests">
-
-                    <h2 class="section-style">Interests</h2>
+                    <h1 class="section-style">Interests</h1>
                 </a>
                 <table>
                     <tr>
