--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                         <th>ほぼ毎日やってます．鍛えることが好きです．</th>
                     </tr>
                     <tr>
+                        <th>技術</th>
+                        <th>ハードからソフトまで幅広く興味があります．</th>
+                    </tr>
+                    <tr>
                         <th>手品</th>
                         <th>カードとコイン中心です．</th>
                     </tr>
