--- a/index.html
+++ b/index.html
@@ -99,9 +99,17 @@
                 <a id="works">
                     <h1 class="section-style">Works</h1>
                 </a>
-                <h2 class="center">Robots</h2>
-                <h2 class="center">Electronics</h2>
-                <h2 class="center">Programing</h2>
+                <div class="center">
+                    <h2>Robots</h2>
+                    <img src="./images/Robot1.png">
+                    <p>初めて作ったロボットです．これがきっかけで技術の分野に進むことを決めました．</p>
+                    <h2>Electronics</h2>
+                    <img src="./images/Circuit1.png">
+                    <p>自作基板のモータードライバです．アナログ回路はこれで勉強しました．</p>
+                    <h2>Programing</h2>
+                    <img src="./images/Program1.png">
+                    <p>アート作品の一つです．セルグリッドオートマトンと呼ばれるものです．</p>
+                </div>
             </div>
 
             <div class="cinterests">
