--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 </a>
                 <table>
                     <tr>
-                        <th>name</th>
+                        <th>Name</th>
                         <th>ei0124</th>
                     </tr>
                     <tr>
-                        <th>birthday</th>
+                        <th>Birthday</th>
                         <th>1996/4/10</th>
                     </tr>
                     <tr>
-                        <th>study</th>
-                        <th>robotics</th>
+                        <th>Study</th>
+                        <th>Robotics</th>
                     </tr>
                     <tr>
-                        <th>email</th>
+                        <th>Email</th>
                         <th>chronolavos0124[at]gmail.com</th>
                     </tr>
                 </table>
@@ -97,19 +97,38 @@
 
             <div class="cworks">
                 <a id="works">
+
                     <h1 class="section-style">Works</h1>
                 </a>
-                <div class="center">
-                    <h2>Robots</h2>
-                    <img src="./images/Robot1.png">
-                    <p>初めて作ったロボットです．これがきっかけで技術の分野に進むことを決めました．</p>
-                    <h2>Electronics</h2>
-                    <img src="./images/Circuit1.png">
-                    <p>自作基板のモータードライバです．アナログ回路はこれで勉強しました．</p>
-                    <h2>Programming</h2>
-                    <img src="./images/Program1.png">
-                    <p>アート作品の一つです．セルグリッドオートマトンと呼ばれるものです．</p>
-                </div>
+                <table>
+                    <tr>
+                        <th>
+                            <h2>Robots</h2>
+                            <p>初めて作ったロボットです．これがきっかけで技術の分野に進むことを決めました．</p>
+                        </th>
+                        <th>
+                            <img src="./images/Robot1.png">
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <img src="./images/Circuit1.png">
+                        </th>
+                        <th>
+                            <h2>Electronics</h2>
+                            <p>自作基板のモータードライバです．アナログ回路はこれで勉強しました．</p>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <h2>Programming</h2>
+                            <p>アート作品の一つです．セルグリッドオートマトンと呼ばれるものです．</p>
+                        </th>
+                        <th>
+                            <img src="./images/Program1.png">
+                        </th>
+                    </tr>
+                </table>
             </div>
 
             <div class="cinterests">
@@ -158,7 +177,8 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="main.js"></script>
 </body>
 </html>
