--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ei0124 Portfolio</title>
     <link href="main.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body>
     <div id="app">
@@ -27,19 +28,19 @@
                 </a>
                 <table>
                     <tr>
-                        <th>Name</th>
+                        <th><i class="fas fa-signature fa-fw cname"></i>Name</th>
                         <th>ei0124</th>
                     </tr>
                     <tr>
-                        <th>Birthday</th>
+                        <th><i class="fas fa-birthday-cake fa-fw ccake"></i>Birthday</th>
                         <th>1996/4/10</th>
                     </tr>
                     <tr>
-                        <th>Study</th>
+                        <th><i class="fas fa-user-graduate fa-fw cstudy"></i>Study</th>
                         <th>Robotics</th>
                     </tr>
                     <tr>
-                        <th>Email</th>
+                        <th><i class="fas fa-envelope fa-fw cemail"></i>Email</th>
                         <th>chronolavos0124[at]gmail.com</th>
                     </tr>
                 </table>
@@ -137,31 +138,31 @@
                 </a>
                 <table>
                     <tr>
-                        <th>筋トレ</th>
-                        <th>ほぼ毎日やってます．鍛えることが好きです．</th>
+                        <th><i class="fas fa-dumbbell fa-fw cmuscle"></i>筋トレ</th>
+                        <th>   ほぼ毎日やってます．鍛えることが好きです．</th>
                     </tr>
                     <tr>
-                        <th>技術</th>
+                        <th><i class="fas fa-laptop fa-fw ctech"></i>技術</th>
                         <th>ハードからソフトまで幅広く興味があります．</th>
                     </tr>
                     <tr>
-                        <th>手品</th>
+                        <th><i class="fas fa-magic fa-fw cmagic"></i>手品</th>
                         <th>カードとコイン中心です．</th>
                     </tr>
                     <tr>
-                        <th>将棋，囲碁，麻雀</th>
+                        <th><i class="fas fa-chess-knight fa-fw cgame"></i>将棋，囲碁，麻雀</th>
                         <th>物心付いた頃からやってます．</th>
                     </tr>
                     <tr>
-                        <th>料理</th>
+                        <th><i class="fas fa-cookie fa-fw ccook"></i>料理</th>
                         <th>お菓子が一番得意ですが，最近は家庭料理に移行してます．</th>
                     </tr>
                     <tr>
-                        <th>バイク旅</th>
+                        <th><i class="fas fa-motorcycle fa-fw cbike"></i>バイク旅</th>
                         <th>原付でどこへでも出掛けます．</th>
                     </tr>
                     <tr>
-                        <th>アニメ</th>
+                        <th><i class="fas fa-tv fa-fw canime"></i>アニメ</th>
                         <th>宝島，攻殻機動隊，ジョジョが大好きです．</th>
                     </tr>
                 </table>
