--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ei0124 Portfolio</title>
     <link href="main.css" rel="stylesheet">
+    <link rel="stylesheet" href="responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body>
@@ -71,15 +72,15 @@
                     <tr>
                         <th><a href="https://www.security-camp.or.jp" target="_blank">Seccamp</a></th>
                         <th>
-                            <p>2018全国（参加）</p>
-                            <p>2019全国（チューター）</p>
-                            <p>2019福岡（チューター）</p>
-                            <p>2019長崎（チューター）</p>
+                            <p>2018全国<br>（参加）</p>
+                            <p>2019全国<br>（チューター）</p>
+                            <p>2019福岡<br>（チューター）</p>
+                            <p>2019長崎<br>（チューター）</p>
                         </th>
                     </tr>
                     <tr>
                         <th><a href="https://codeblue.jp/2019/en" target="_blank">CodeBlue</a></th>
-                        <th>2019（学スタ）</th>
+                        <th>2019<br>（学スタ）</th>
                     </tr>
                     <tr>
                         <th><a href="https://jphacks.com" target="_blank">JPHacks</a></th>
@@ -105,7 +106,7 @@
                     <tr>
                         <th>
                             <h2>Robots</h2>
-                            <p>初めて作ったロボットです．これがきっかけで技術の分野に進むことを決めました．</p>
+                            <p>初めて作ったロボットです．<br>これがきっかけで技術の分野に進むことを決めました．</p>
                         </th>
                         <th>
                             <img src="./images/Robot1.png">
@@ -117,13 +118,13 @@
                         </th>
                         <th>
                             <h2>Electronics</h2>
-                            <p>自作基板のモータードライバです．アナログ回路はこれで勉強しました．</p>
+                            <p>自作基板のモータードライバです．<br>アナログ回路はこれで勉強しました．</p>
                         </th>
                     </tr>
                     <tr>
                         <th>
                             <h2>Programming</h2>
-                            <p>アート作品の一つです．セルグリッドオートマトンと呼ばれるものです．</p>
+                            <p>アート作品の一つです．<br>セルグリッドオートマトンと呼ばれるものです．</p>
                         </th>
                         <th>
                             <img src="./images/Program1.png">
@@ -139,7 +140,7 @@
                 <table>
                     <tr>
                         <th><i class="fas fa-dumbbell fa-fw cmuscle"></i>筋トレ</th>
-                        <th>   ほぼ毎日やってます．鍛えることが好きです．</th>
+                        <th>毎日やってます．<br>鍛えることが好きです．</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-laptop fa-fw ctech"></i>技術</th>
@@ -147,7 +148,7 @@
                     </tr>
                     <tr>
                         <th><i class="fas fa-magic fa-fw cmagic"></i>手品</th>
-                        <th>カードとコイン中心です．</th>
+                        <th>カードとコインです．</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-chess-knight fa-fw cgame"></i>将棋，囲碁，麻雀</th>
@@ -155,7 +156,7 @@
                     </tr>
                     <tr>
                         <th><i class="fas fa-cookie fa-fw ccook"></i>料理</th>
-                        <th>お菓子が一番得意ですが，最近は家庭料理に移行してます．</th>
+                        <th>お菓子が一番得意ですが，<br>最近は家庭料理に移行してます．</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-motorcycle fa-fw cbike"></i>バイク旅</th>
