--- a/index.html
+++ b/index.html
@@ -80,19 +80,32 @@
                     </tr>
                     <tr>
                         <th><a href="https://codeblue.jp/2019/en" target="_blank">CodeBlue</a></th>
-                        <th>2019<br>（学スタ）</th>
+                        <th>
+                            <p>2019<br>（学スタ）</p>
+                        </th>
                     </tr>
                     <tr>
                         <th><a href="https://jphacks.com" target="_blank">JPHacks</a></th>
-                        <th>2018福岡</th>
+                        <th>
+                            <p>2018福岡</p>
+                        </th>
                     </tr>
                     <tr>
-                        <th><a href="https://atcoder.jp/?lang=ja" target="_blank">AtCoder</a></th>
-                        <th class="acolor">highest 883</th>
+                        <th><a href="https://atcoder.jp/users/ei0124?lang=ja" target="_blank">AtCoder</a></th>
+                        <th class="acolor">
+                            <p>MaxRating  883</p>
+                            <p>AcceptedCountRank {{ countrank }}</p>
+                            <p>RatedPointSumRank {{ sumrank }}</p>
+                        </th>
                     </tr>
                     <tr>
                         <th><a href="https://codeforces.com" target="_blank">Codeforces</a></th>
-                        <th class="ccolor">highest 1418</th>
+                        <th class="ccolor">
+                            <p>MaxRating {{ maxrating }}</p>
+                            <p>MaxRank {{ maxrank }}</p>
+                            <p>NowRating {{ rating }}</p>
+                            <p>NowRank {{ rank }}</p>
+                        </th>
                     </tr>
                 </table>
             </div>
