fixed codeforces link

--- a/index.html
+++ b/index.html
@@ -99,12 +99,10 @@
                         </th>
                     </tr>
                     <tr>
-                        <th><a href="https://codeforces.com" target="_blank">Codeforces</a></th>
+                        <th><a href="https://codeforces.com/profile/ei0124" target="_blank">Codeforces</a></th>
                         <th class="ccolor">
                             <p>MaxRating {{ maxrating }}</p>
                             <p>MaxRank {{ maxrank }}</p>
-                            <p>NowRating {{ rating }}</p>
-                            <p>NowRank {{ rank }}</p>
                         </th>
                     </tr>
                 </table>
