add googlefonts and fix "seccamp"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="main.css" rel="stylesheet">
     <link rel="stylesheet" href="responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
@@ -87,7 +88,7 @@
                         </th>
                     </tr>
                     <tr>
-                        <th><a href="https://www.security-camp.or.jp" target="_blank">Seccamp</a></th>
+                        <th><a href="https://www.security-camp.or.jp" target="_blank">seccamp</a></th>
                         <th>
                             <p>2018全国<br>（参加）</p>
                             <p>2019全国<br>（チューター）</p>
