--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </a>
                 <table>
                     <tr>
-                        <th><a href="http://www.official-robocon.com" target="_blank">Robocon</a></th>
+                        <th><a href="http://www.official-robocon.com" target="_blank">ROBOCON</a></th>
                         <th>
                             <p>2015</p>
                             <p>2016</p>
@@ -102,7 +102,7 @@
                         </th>
                     </tr>
                     <tr>
-                        <th><a href="https://www.security-camp.or.jp" target="_blank">seccamp</a></th>
+                        <th><a href="https://www.security-camp.or.jp" target="_blank">SECCAMP</a></th>
                         <th>
                             <p>2018全国<br>（参加）</p>
                             <p>2019全国<br>（チューター）</p>
@@ -111,13 +111,13 @@
                         </th>
                     </tr>
                     <tr>
-                        <th><a href="https://codeblue.jp/2019/en" target="_blank">CodeBlue</a></th>
+                        <th><a href="https://codeblue.jp/2019/en" target="_blank">CODEBLUE</a></th>
                         <th>
                             <p>2019<br>（学スタ）</p>
                         </th>
                     </tr>
                     <tr>
-                        <th><a href="https://jphacks.com" target="_blank">JPHacks</a></th>
+                        <th><a href="https://jphacks.com" target="_blank">JPHACKS</a></th>
                         <th>
                             <p>2018福岡</p>
                         </th>
@@ -202,9 +202,9 @@
         <div class="footer">
             <div class="footer-logo">Links</div>
             <div class="footer-list">
-                <ul>
-                    <li v-for="item in linklist"><a v-bind:href="item.url" target="_blank"><img v-bind:src="item.src" v-bind:alt="item.url" border="0"></a></li>
-                </ul>
+                <transition-group appear tag="ul" @before-enter="beforeEnter">
+                    <li v-for="(item, index) in linklist" :data-index="index" :key="item"><a v-bind:href="item.url" target="_blank"><img v-bind:src="item.src" v-bind:alt="item.url" border="0"></a></li>
+                </transition-group>
             </div>
         </div>
     </div>
