--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="header">
             <div class="header-logo">ei0124 Portfolio</div>
             <div class="header-list">
-                <ul>
-                    <li v-for="item in contentslist"><a v-bind:href="item.url">{{item.text}}</a></li>
-                </ul>
+                <transition-group appear tag="div" @before-enter="beforeEnter">
+                    <li v-for="(item, index) in contentslist" :data-index="index" :key="item"><a v-bind:href="item.url">{{item.text}}</a></li>
+                </transition-group>
             </div>
         </div>
 
