--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
                 <table>
                     <tr>
                         <th><a href="https://atcoder.jp/users/ei0124?lang=ja" target="_blank">AtCoder</a></th>
-                        <th class="acolor">
-                            <p>MaxRating  883</p>
+                        <th>
+                            <p class="acolor">MaxRating  883</p>
                             <p>AcceptedCountRank {{ countrank }}</p>
                             <p>RatedPointSumRank {{ sumrank }}</p>
                         </th>
                     </tr>
                     <tr>
                         <th><a href="https://codeforces.com/profile/ei0124" target="_blank">Codeforces</a></th>
-                        <th class="ccolor">
-                            <p>MaxRating {{ maxrating }}</p>
+                        <th>
+                            <p class="ccolor">MaxRating {{ maxrating }}</p>
                             <p>MaxRank {{ maxrank }}</p>
                         </th>
                     </tr>
@@ -136,9 +136,14 @@
                             <h2>Robots</h2>
                             <!--<p>初めて作ったロボットです．<br>これがきっかけで技術の分野に進むことを決めました．</p>-->
                             <button v-on:click="roboshow=!roboshow">show list</button>
+                            <!--
                             <div v-show="roboshow">
                                 <a href="https://github.com/ei0410/Creo/blob/master/iphone/iphone.stl" target="_blank">iPhone Case</a>
                             </div>
+                            -->
+                            <transition-group v-show="roboshow" appear tag="div" @before-enter="beforeEnter">
+                                <a v-for="(item, index) in robolist" :data-index="index" :key="item" v-bind:href="item.url" target="_blank">{{ item.text }}</a>
+                            </transition-group>
                         </th>
                         <th>
                             <img src="./images/Robot1.png">
@@ -152,9 +157,14 @@
                             <h2>Electronics</h2>
                             <!--<p>自作基板のモータードライバです．<br>アナログ回路はこれで勉強しました．</p>-->
                             <button v-on:click="elecshow=!elecshow">show list</button>
+                            <!--
                             <div v-show="elecshow">
                                 <a href="https://github.com/ei0410/FPGA/tree/master/atlys/practice" target="_blank">FPGA</a>
                             </div>
+                            -->
+                            <transition-group v-show="elecshow" appear tag="div" @before-enter="beforeEnter">
+                                <a v-for="(item, index) in eleclist" :data-index="index" :key="item" v-bind:href="item.url" target="_blank">{{ item.text }}</a>
+                            </transition-group>
                         </th>
                     </tr>
                     <tr>
@@ -162,9 +172,14 @@
                             <h2>Programming</h2>
                             <!--<p>アート作品の一つです．<br>セルグリッドオートマトンと呼ばれるものです．</p>-->
                             <button v-on:click="progshow=!progshow">show list</button>
+                            <!--
                             <div v-show="progshow">
                                 <a href="https://ei0124page.glitch.me/" target="_blank">AR</a>
                             </div>
+                            -->
+                            <transition-group v-show="progshow" appear tag="div" @before-enter="beforeEnter">
+                                <a v-for="(item, index) in proglist" :data-index="index" :key="item" v-bind:href="item.url" target="_blank">{{ item.text }}</a>
+                            </transition-group>
                         </th>
                         <th>
                             <img src="./images/Program1.png">
